done dashboard home design + some landing elements

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,8 +21,8 @@ html {
   background-color:#1df45d;
 }
 .separator{
-  border-color: #1df45d;
-  background-color: #1df45d;
+  border-color: black;
+  background-color: black;
 
 }
 .borders{
