retaking control with self learning and quit good progress on the structure and the team and the landing page

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,10 +8,10 @@ html {
     scroll-behavior: smooth;
 }
 #btn{
-  background-color: #00e388;
+  background-color: #36ca8f;
 }
 #btn:hover{
-  background-color: #00ba70;
+  background-color: #068955;
 }
 
 #bem-prep-card{
